--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div>
     <a href="01 incluir">INCLUIR CSS</a>
     <a href="02 colores">INCLUIR COLORES</a>
-    <a href="">INCLUIR TEXTO</a>
+    <a href="03 texto/">INCLUIR TEXTO</a>
     <a href="">INCLUIR CSS</a>
     <a href="">INCLUIR COLORES</a>
     <a href="">INCLUIR TEXTO</a>
