--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <div>
     <a href="01 incluir">INCLUIR CSS</a>
     <a href="02 colores">INCLUIR COLORES</a>
-    <a href="03 texto/">INCLUIR TEXTO</a>
-    <a href="">INCLUIR CSS</a>
-    <a href="">INCLUIR COLORES</a>
+    <a href="03 texto">INCLUIR TEXTO</a>
+    <a href="04 unidades">INCLUIR CSS</a>
+    <a href="05 boxmodel">INCLUIR COLORES</a>
     <a href="">INCLUIR TEXTO</a>
 </div>
 </body>
