--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="04 unidades">INCLUIR CSS</a>
     <a href="05 boxmodel">INCLUIR COLORES</a>
     <a href="">INCLUIR TEXTO</a>
-</div>
+    <a href="poseemoji/">INCLUIR EMOJI</a>
+    <a href="Casa/">INCLUIR CASA</a>
 </body>
 </html>
