--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="02 colores">INCLUIR COLORES</a>
     <a href="03 texto">INCLUIR TEXTO</a>
     <a href="04 unidades">INCLUIR CSS</a>
-    <a href="05 boxmodel">INCLUIR COLORES</a>
+    <a href="05 boxmodel">INCLUIR BOXMODEL</a>
     <a href="">INCLUIR TEXTO</a>
     <a href="poseemoji/">INCLUIR EMOJI</a>
     <a href="Casa/">INCLUIR CASA</a>
