--- a/10 grid/index.html
+++ b/10 grid/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GRID</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <h1>GRID</h1>
+    <div class="main">
+<div class="item"></div>
+<div class="item"></div>
+<div class="item"></div>
+<div class="item"></div>
+<div class="item"></div>
+<div class="item"></div>
+<div class="item"></div>
+<div class="item"></div>
+<div class="item"></div>
+<div class="item"></div>
+    </div>
+    <h1>EJERCICIO</h1>
+    <div class="main2">
+        <div class="item item1"></div>
+        <div class="item item2"></div>
+        <div class="item item3"></div>
+        <div class="item item4"></div>
+        <div class="item item5"></div>
+        </div>
 </body>
 </html>
