--- a/10 grid/index.html
+++ b/10 grid/index.html
@@ -29,5 +29,14 @@
         <div class="item item4"></div>
         <div class="item item5"></div>
         </div>
+        <h1>EJERCICIO2</h1>
+        <div class="main3">
+            <div class="item item6">CABECERA</div>
+            <div class="item item7">MENU</div>
+            <div class="item item8"></div>
+            <div class="item item9">IZQUIERDA</div>
+            <div class="item item10">DERECHA</div>
+            <div class="item item11">PIE</div>
+            </div>
 </body>
 </html>
