--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <a href="poseemoji/">INCLUIR EMOJI</a>
     <a href="Casa/">INCLUIR CASA</a>
     <a href="10 grid/index.html">GRID</a>
+    <a href="10 maqueta/">Maqueta pag web</a>
 </body>
 </html>
