--- a/10 maqueta/index.html
+++ b/10 maqueta/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Maqueta</title>
-
+    <title>Document</title>
 </head>
-<div>
-    <h1>EJERCICIO 4</h1>
-    <div class="header">MAQUETA WEB</div>
-    <div class="barra"></div>
-        <div class="enlace">ENLACE</div>
-        <div class="enlace">ENLACE</div>
-        <div class="enlace">ENLACE</div>
-        <div class="enlace">ENLACE</div>
-        <div class="enlace">ENLACE</div>
-        <div class="enlace">ENLACE</div>
-        <div class="banner">BANNER</div>
-        </div>
-        <div class="contenido">BANNER</div>
-        <div class="baner1">BANNER1</div>
-        <div class="baner2">BANNER2</div>
-        <div class="contenido">BANNER</div>
+<body>
+    <div class="header">Maquetacion Web</div>
+    <div class="barra">
+    <div class="enlace">ENLACE1</div>
+    <div class="enlace">ENLACE2</div>
+    <div class="enlace">ENLACE3</div>
+    <div class="enlace">ENLACE4</div>
+    <div class="enlace">ENLACE5</div>
+    <div class="enlace">ENLACE6</div>
+    <div class="banner">Banner</div>
+</div>
+<div class="contenido">AREA DE CONTENIDO</div>
+<div class="banner1">Banner 1</div>
+<div class="banner2">Banner 2</div>
+<div class="pie">PIE DE PAGINA </div>
+
 </body>
 </html>
