--- a/04 unidades/index.html
+++ b/04 unidades/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>unidades de medidas</title>
+  <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
-    
+  <div id="caja1">caja 1</div>
+  <div id="caja2">caja 2 </div>
+  <div id="caja3">caja 3</div>
+  <div id="caja4">caja 4 </div>
+  <div id="caja5">caja 5</div>
+  <div id="caja6">caja 6 </div>
+  <div id="caja7">caja 7</div>
+  <div id="caja8">caja 8 </div>
 </body>
+
 </html>
