--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 </head>
 <body>
     <h1>Mis practicas</h1>
-    <img id="imagen" src="cepillin.jpg.jfif" alt="">
-    <h2>JHOAN REYES MENA, JORGE ANGEL BENITEZ OSORIO</h2> <hr>
+    <img id="imagen" src="titans.jpg" alt="">
+    <h2>JHOAN REYES MENA</h2> <hr>
 <div>
-    <a href="01 incluir">INCLUIR CSS</a>
-    <a href="02 colores">INCLUIR COLORES</a>
-    <a href="03 texto">INCLUIR TEXTO</a>
-    <a href="04 unidades">INCLUIR CSS</a>
-    <a href="05 boxmodel">INCLUIR BOXMODEL</a>
-    <a href="">INCLUIR TEXTO</a>
-    <a href="poseemoji/">INCLUIR EMOJI</a>
-    <a href="Casa/">INCLUIR CASA</a>
+    <a href="01 incluir">CSS</a>
+    <a href="02 colores">COLORES</a>
+    <a href="03 texto">TEXTO</a>
+    <a href="04 unidades">UNIDADES</a>
+    <a href="05 boxmodel">BOXMODEL</a>
+    <a href="poseemoji/"> EMOJI</a>
+    <a href="Casa/"> CASA</a>
     <a href="10 grid/index.html">GRID</a>
     <a href="10 maqueta/">Maqueta pag web</a>
 </body>
