--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <a href="03 texto">TEXTO</a>
     <a href="04 unidades">UNIDADES</a>
     <a href="05 boxmodel">BOXMODEL</a>
+    <a href="06 posicionamiento/index.html">BOXMODEL</a>
     <a href="poseemoji/"> EMOJI</a>
     <a href="Casa/"> CASA</a>
     <a href="10 grid/index.html">GRID</a>
     <a href="10 maqueta/">Maqueta pag web</a>
+    <a href="11 flexbox/index.html">Maqueta pag web</a>
+    <a href="12 bootstrap/index.html">Maqueta pag web</a>
 </body>
 </html>
