--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilo.css"
 </head>
 <body>
-    <h1>Mis practicas</h1>
+    <h1>Mis practicas.</h1>
     <img id="imagen" src="titans.jpg" alt="">
     <h2>JHOAN REYES MENA</h2> <hr>
 <div>
@@ -22,7 +22,7 @@
     <a href="Casa/"> CASA</a>
     <a href="10 grid/index.html">GRID</a>
     <a href="10 maqueta/">Maqueta pag web</a>
-    <a href="11 flexbox/index.html">Maqueta pag web</a>
-    <a href="12 bootstrap/index.html">Maqueta pag web</a>
+    <a href="11 flexbox/index.html">Flexbox</a>
+    <a href="12 bootstrap/index.html">Bootstrap</a>
 </body>
 </html>
